Atualiza as cores para serem usadas - Gediel

--- a/colors-variables.css
+++ b/colors-variables.css
@@ -1,2 +1,12 @@
 /*Importar as cores aqui*/
 
+:root {
+    --pink: #fd6687;
+    --pink-hover: #ff7aa8;
+    --yellow: #ffce69;
+    --yellow-hover: #ffdf8c;
+    --rulles-bg: #ffce69;
+    --rulles-hover: #ffdf8c;
+    --custom-bg: #7945FF; /* Nova cor de fundo */
+}
+
