--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;700&display=swap');
+@import 'colors-variables.css';
 
 * {
     font-family: 'Montserrat', sans-serif;
-    background-color: #7945FF;
+    background-color: var(--custom-bg);
 }
 
 iframe {
