--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;700&display=swap');
 @import 'colors-variables.css';
+@import '/tetris/custom-footer/footer.css';
+@import '/tetris/header.css';
 
 * {
     font-family: 'Montserrat', sans-serif;
