--- a/alterar-perfil/alterar.css
+++ b/alterar-perfil/alterar.css
@@ -1,6 +1,6 @@
 @import '../style.css';
 @import '../custum-button/button.css';
-@import '../botao/botao.css';
+@import '../tetris-brenno/botao/botao.css';
 
 .title {
     color: #fff;
