--- a/custom-footer/footer.css
+++ b/custom-footer/footer.css
@@ -1,6 +1,7 @@
 body, html {
     margin: 0;
     padding: 0;
+    height: 100%;
 }
 
 #footer-svg svg {
@@ -10,6 +11,9 @@ body, html {
 footer {
     background-image: url('../images/footer.svg');
     background-repeat: repeat-x;
-    margin-bottom: 0;
     margin-top: 10%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
