--- a/custom-footer/footer.css
+++ b/custom-footer/footer.css
@@ -1,19 +1,10 @@
-body, html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-}
-
-#footer-svg svg {
-    width: 100%;
-}
-
-footer {
+footer::before {
+    content: "";
     background-image: url('../images/footer.svg');
     background-repeat: repeat-x;
-    margin-top: 10%;
-    position: absolute;
+    position: fixed; 
     bottom: 0;
     left: 0;
     width: 100%;
+    height: 2%; 
 }
