--- a/custom-folder/footer.css
+++ b/custom-folder/footer.css
@@ -1,15 +1,11 @@
-body, html {
-    margin: 0;
-    padding: 0;
-}
-
-#footer-svg svg {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-}
 
 footer {
+    content: "";
     background-image: url('../images/footer.svg');
-    background-repeat: repeat;
+    background-repeat: repeat-x;
+    position: fixed; 
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 5%;
 }
