--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;700&display=swap');
 @import 'colors-variables.css';
-@import '/custom-folder/footer.css';
+@import '/custom-footer/footer.css';
 @import '/header.css';
 
 * {
     font-family: 'Montserrat', sans-serif;
     background-color: var(--custom-bg);
+    overflow: hidden;
 }
 
 html, body {
