--- a/style.css
+++ b/style.css
@@ -1,20 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;700&display=swap');
 @import 'colors-variables.css';
-@import '/custom-folder/footer.css';
+@import './custom-folder/footer.css';
 @import '/header.css';
+@import '../structure/structure.css';
+@import '../style.css';
 
 * {
     font-family: 'Montserrat', sans-serif;
     background-color: var(--custom-bg);
+    /* overflow: hidden; */
 }
 
 html, body {
     height: 100%;
+    width: 100%;
     margin: 0;
     padding: 0;
 }
 
-main{
+.main{
     display: flex;
     justify-content: center;
     min-height: 100%;
