--- a/colors-variables.css
+++ b/colors-variables.css
@@ -1,9 +1,8 @@
-/*Importar as cores aqui*/
 
 :root {
     --pink: #fd6687;
     --pink-hover: #ff7aa8;
     --yellow: #ffce69;
     --yellow-hover: #ffdf8c;
-    --custom-bg: #7945FF; /* Nova cor de fundo */
+    --custom-bg: #7945FF; 
 }
