--- a/game-rules/game-rules.css
+++ b/game-rules/game-rules.css
@@ -2,13 +2,6 @@
 @import '../style.css';
 @import '../custom-footer/footer.css';
 
-body, html {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    display: flex;
-}
-
 .card h1 {
     background: none;
     font-style: bold;
@@ -27,3 +20,38 @@ body, html {
     margin-top: 1%;
 }
 
+.round-card::before {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #fd6687;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    left: 50%;
+}
+
+header {
+    overflow: hidden;
+    color: #000000;
+    font-size: 20px;
+    font-weight: bold;
+    margin: 30px 0px 30px 0px;
+    display: flex;
+    height: 30px;
+    align-items: center;
+    text-transform: uppercase;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between !important;
+    width: 100% !important;
+    margin: 0px 50px 0px 50px;
+}
+
+nav a {
+    color: #000000 !important;
+    text-decoration: none; 
+    margin: 0 10px;
+}
