--- a/home-page-game/home-page-game.css
+++ b/home-page-game/home-page-game.css
@@ -23,6 +23,16 @@
     font-weight: bold;
 }
 
+.game-frame a {
+    text-decoration: none;
+   background-color: inherit;
+}
+
+.game-frame a:visited {
+    color: #F89622;
+   background-color: inherit;
+}
+
 .game-frame h1 {
     padding-top: 10px;
     font-size: 26px;
@@ -43,6 +53,7 @@
 
 .display-flex {
     display: flex;
+    margin-top: 5%;
 }
 
 .row {
@@ -51,15 +62,41 @@
 
 #button-rules {
     position: relative;
-    margin-left: 57%;
+    margin-left: 53%;
     font-size: 25px;
     height: 100px;
     text-transform: uppercase;
     margin-top: -20%;
+    width: 550px;
 }
 
 #button-rules a {
     text-decoration: none;
     color: #010101;
     background: none;
+}
+
+header {
+    overflow: hidden;
+    color: #000000;
+    font-size: 20px;
+    font-weight: bold;
+    margin: 30px 0px 30px 0px;
+    display: flex;
+    height: 30px;
+    align-items: center;
+    text-transform: uppercase;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between !important;
+    width: 100% !important;
+    margin: 0px 50px 0px 50px;
+}
+
+nav a {
+    color: #000000 !important;
+    text-decoration: none; 
+    margin: 0 10px;
 }
