--- a/style.css
+++ b/style.css
@@ -25,11 +25,29 @@ html, body {
     box-sizing: border-box;
 }
 
-iframe {
-    width: 100%; 
-    border: none;
-    padding: 0;
-    margin: 0;
+header {
+    overflow: hidden;
+    color: #000000;
+    font-size: 20px;
+    font-weight: bold;
+    margin: 30px 0px 30px 0px;
+    display: flex;
+    height: 30px;
+    align-items: center;
+    text-transform: uppercase;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between !important;
+    width: 100% !important;
+    margin: 0px 50px 0px 50px;
+}
+
+nav a {
+    color: #000000 !important;
+    text-decoration: none; 
+    margin: 0 10px;
 }
 
 #tetris-logo {
@@ -73,8 +91,7 @@ iframe {
 .username::placeholder{
     color: white;
     font-size: 3vh;
-    font-weight: bold
-    ;
+    font-weight: bold;
 }
 
 .senha{
@@ -92,7 +109,8 @@ iframe {
 
 .senha::placeholder{
     color:  #74562c;
-    font-size: 4vh;
+    font-size: 3vh;
+    font-weight: bold;
 }
 
 
