--- a/game/game.css
+++ b/game/game.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;700&display=swap');
-@import '../style.css';
 
 * {
     font-family: 'Montserrat', sans-serif;
@@ -144,28 +143,9 @@ span{
     margin-top: 0px;
 }
 
-.botaoPerfil {
+.botao {
     display: flex;
-    margin-top: 5%;
-    width: 150px;
     height: 30px;
-    text-decoration: none;
-    font-size: 20px;
-    justify-content: center;
-    color: black;
-    border-radius: 20px;
-    border-top: 3px solid #000;
-    border-right: 5px solid #000;
-    border-bottom: 10px solid #000;
-    border-left: 5px solid #000;
-    background: #f89622;
-    padding: 10px 20px;
-    font-weight: bold;
-} 
-
-.botaoSair {
-    display: flex;
-    width: 150px;
     margin-top: 5%;
     text-decoration: none;
     font-size: 20px;
@@ -176,28 +156,24 @@ span{
     border-right: 5px solid #000;
     border-bottom: 10px solid #000;
     border-left: 5px solid #000;
-    background: #ffce69;
     padding: 10px 20px;
     font-weight: bold;
 }
 
+.botaoPerfil {
+    background: #f89622;
+    width: 150px;
+} 
+
+.botaoSair {
+    background: #ffce69;
+    width: 150px;
+}
+
 .botaoRankingGlobal{
-    display: flex;
-    width: 180px;
-    height: 30px;
-    text-decoration: none;
-    font-size: 18px;
-    justify-content: center;
-    color: black;
-    border-radius: 20px;
-    border-top: 3px solid #000;
-    border-right: 5px solid #000;
-    border-bottom: 10px solid #000;
-    border-left: 5px solid #000;
+    width: 195px !important;
     background: #fd6687;
-    padding: 10px 20px;
     margin-top: 10%;
-    font-weight: bold;
 }
 
 .cards-direita {
