--- a/alterar-perfil/alterar.css
+++ b/alterar-perfil/alterar.css
@@ -3,7 +3,7 @@
 @import '../tetris-brenno/botao/botao.css';
 
 .title {
-    color: #fff;
+    color: var(--white);
     text-align: center;
     font-size: 35px;
     margin-top: -8%;
@@ -50,7 +50,7 @@
 
 .aCadastre {
     margin-top: 1%;
-    color: #fff;
+    color: var(--white);
     font-weight: 500;
     text-decoration: underline;
     font-size: 18px;
@@ -62,7 +62,7 @@
     width: 100vw;
     height: 100vh;
     left: -5px;
-    background-color: #23053F;
+    background-color: var(--black);
     border-radius: 50%;
     transform: translateY(80%); /* Centraliza horizontalmente */
 
