--- a/game/game.css
+++ b/game/game.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;700&display=swap');
-@import '/custom-footer/footer.css';
-@import '/colors-variables.css';
+@import '../custom-footer/footer.css';
+@import '../colors-variables.css';
 
 * {
     font-family: 'Montserrat', sans-serif;
@@ -8,6 +8,7 @@
 
 body{
     background-color: var(--custom-bg);
+    margin-bottom: 5%;
 }
 
 header {
