--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;700&display=swap');
-@import 'colors-variables.css';
-@import '/custom-footer/footer.css';
 @import '/header.css';
 @import '../structure/structure.css';
 @import '../style.css';
+@import './custom-footer/footer.css';
+@import './colors-variables.css';
 
 * {
     font-family: 'Montserrat', sans-serif;
