Atualiza as cores

--- a/colors-variables.css
+++ b/colors-variables.css
@@ -6,5 +6,9 @@
     --black: #000000;
     --white: #ffffff;
     --dark-purple: #23053F;
+    --gray: #696969;
+    --orange: #f89622;
+    --dark-brown:#74562c;
+    --purple: #5c2dd5;
     --custom-bg: #7945FF;
 }
