--- a/header.css
+++ b/header.css
@@ -7,7 +7,7 @@
 
 header {
     overflow: hidden;
-    color: #000000;
+    color: var(--black);
     font-size: 20px;
     font-weight: bold;
     margin: 30px 0px 30px 0px;
@@ -25,7 +25,7 @@ nav {
 }
 
 nav a {
-    color: #000000 !important;
+    color: var(--black) !important;
     text-decoration: none; 
     margin: 0 10px;
 }
