--- a/alterar-perfil/alterar.css
+++ b/alterar-perfil/alterar.css
@@ -1,5 +1,5 @@
 @import '../style.css';
-@import '../custum-button/button.css';
+@import '../custom-button/button.css';
 @import '../botao/botao.css';
 @import '../custom-footer/footer.css';
 @import '../colors-variables.css';
@@ -65,6 +65,6 @@
     left: -5px;
     background-color: var(--black);
     border-radius: 50%;
-    transform: translateY(80%); /* Centraliza horizontalmente */
+    transform: translateY(80%); 
 
 }
