--- a/register/register.css
+++ b/register/register.css
@@ -1,5 +1,5 @@
 @import '../style.css';
-@import '../custum-button/button.css';
+@import '../custom-button/button.css';
 @import '../botao/botao.css';
 
 
