--- a/home-page-game/home-page-game.css
+++ b/home-page-game/home-page-game.css
@@ -68,10 +68,11 @@
     text-transform: uppercase;
     margin-top: -20%;
     width: 550px;
-}
-
-#button-rules a {
     text-decoration: none;
     color: var(--black);
-    background: none;
+}
+
+.regras {
+    margin-left: 0px !important;
+    width: 400px !important;
 }
