--- a/game-rules/game-rules.css
+++ b/game-rules/game-rules.css
@@ -5,7 +5,7 @@
 
 .card h1 {
     background: none;
-    font-style: bold;
+    font-weight: bold;
     font-size: 40px;
     font-weight: 800;
     margin-bottom: 20px;
