--- a/game/game.css
+++ b/game/game.css
@@ -12,7 +12,7 @@ body{
 }
 
 header {
-    color: var();
+    color: var(--black);
     font-size: 20px;
     font-weight: bold;
     margin: 30px 0px 30px 0px;
