--- a/about-project/about.css
+++ b/about-project/about.css
@@ -1,30 +1,7 @@
 @import '../style.css';
 
-header {
-    color: var(--black);
-    font-size: 20px;
-    font-weight: bold;
-    margin: 30px 0px 30px 0px;
-    display: flex;
-    height: 30px;
-    align-items: center;
-    text-transform: uppercase;
-}
 
-nav {
-    display: flex;
-    justify-content: space-between !important;
-    width: 100% !important;
-    margin: 0px 50px 0px 50px;
-}
-
-nav a {
-    color: var(--black) !important;
-    text-decoration: none; 
-    margin: 0 10px;
-}
-
-main{
+main {
     text-align: center;
     margin: 0 auto;
     max-width: 800px;
@@ -34,14 +11,19 @@ main{
     margin-top: 80px;
 }
 
-.sobre{
+.sobre {
     margin-left: 50px;
     margin-right: 50px;
 }
 
-p{
+p {
     color: var(--white);
-    font-size: 20px;
+    font-size: 16px;
+}
+
+u {
+    color: white; 
+    font-weight: bold;
 }
 
 h1{
@@ -62,4 +44,5 @@ img{
     align-items: center;
     justify-content: center;
     gap: 20px;
+    text-align: left;
 }
