--- a/game/game.css
+++ b/game/game.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;700&display=swap');
 @import '../custom-footer/footer.css';
 @import '../colors-variables.css';
+@import '../style.css';
 
 * {
     font-family: 'Montserrat', sans-serif;
@@ -11,32 +12,10 @@ body{
     margin-bottom: 5%;
 }
 
-header {
-    color: var(--black);
-    font-size: 20px;
-    font-weight: bold;
-    margin: 30px 0px 30px 0px;
-    display: flex;
-    height: 30px;
-    align-items: center;
-    text-transform: uppercase;
-}
-
-nav {
-    display: flex;
-    justify-content: space-between !important;
-    width: 100% !important;
-    margin: 0px 50px 0px 50px;
-}
-
-nav a {
-    color: #000000 !important;
-    text-decoration: none; 
-    margin: 0 10px;
-}
 
 .img-tetris {
     width: 200px;
+    margin-bottom: 2%;
 }
 
 .jogo {
