--- a/colors-variables.css
+++ b/colors-variables.css
@@ -8,6 +8,7 @@
     --white: #ffffff;
     --dark-purple: #23053F;
     --gray: #696969;
+    --dark-gray: #6E6E6E; 
     --orange: #f89622;
     --dark-brown:#74562c;
     --purple: #5c2dd5;
