--- a/global-ranking/global-ranking.css
+++ b/global-ranking/global-ranking.css
@@ -2,12 +2,11 @@
 @import '../custom-footer/footer.css';
 @import '../colors-variables.css';
 @import '../style.css';
-
 * {
     font-family: 'Montserrat', sans-serif;
 }
 
-body{
+body {
     background-color: var(--custom-bg);
     margin-bottom: 5%;
 }
@@ -101,3 +100,24 @@ p {
     margin-left: 20%;
 }
 
+
+.botaoEntendiTudo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 150px;
+    height: 50px;
+    text-decoration: none;
+    font-size: 25px;
+    color: var(--black);
+    border-radius: 30px;
+    border-top: 5px solid var(--black);
+    border-right: 5px solid var(--black);
+    border-bottom: 15px solid var(--black);
+    border-left: 5px solid var(--black);
+    background: var(--yellow);
+    padding: 10px 20px;
+    margin: 0 auto;
+    font-weight: bold;
+}
