--- a/style.css
+++ b/style.css
@@ -50,9 +50,10 @@ nav a {
 }
 
 #tetris-logo {
-    width: 550px; 
-    height: 550px;
-    margin-left: 50px;
+    width: 35%; 
+    height: 30%;
+    margin-top: 0%;
+    margin-left: 2%;
 }
 
 
