--- a/home-page-game/home-page-game.css
+++ b/home-page-game/home-page-game.css
@@ -62,14 +62,17 @@
 
 #button-rules {
     position: relative;
-    margin-left: 53%;
+    margin-left: 50%;
     font-size: 25px;
-    height: 100px;
     text-transform: uppercase;
-    margin-top: -20%;
-    width: 550px;
     text-decoration: none;
     color: var(--black);
+    padding: 10px 105px; /* Aumentar o preenchimento para aumentar o tamanho */
+    border-radius: 3.2vh;
+    cursor: pointer;
+    display: inline-flex; /* Alterado para inline-flex para permitir alinhamento vertical */
+    align-items: center; /* Alinhar verticalmente ao centro */
+    justify-content: center; 
 }
 
 .regras {
