--- a/global-ranking/global-ranking.css
+++ b/global-ranking/global-ranking.css
@@ -49,6 +49,11 @@ body {
 .row {
     display: flex;
     flex-direction: row;
+    margin-left: 15px;
+}
+
+.row span{
+    margin-left: 40px
 }
 
 .column {
@@ -60,7 +65,6 @@ body {
 .border-ye{
     font-weight: bold;
     margin-top: 3%;
-    margin-right: 1%;
     display: flex;
     align-items: center;
     justify-content: center;
