--- a/register/register.css
+++ b/register/register.css
@@ -51,6 +51,7 @@
 
 .aCadastre {
     margin-top: 1%;
+    margin-bottom: 2%;
     color:  var(--white);
     background-color: inherit;
     font-weight: 500;
